# siggraph2025-wave-noise-code

./: README.md
Data/models/: cube_chanf.mtl
Demos/: CMakeLists.txt  Viewer.cpp  Viewer.h  WaveNoise.cpp  WaveNoise.h  demo_gl_01.cpp  hvPair.h  pg_wave_noise_demo.cpp  wave_noise_01.cpp
GRSI/: CMakeLists.txt  README.md  grsi_01.cpp
